update uint128
